--- a/content/3.Web dev/3.Cheatsheet.md
+++ b/content/3.Web dev/3.Cheatsheet.md
@@ -1,1 +1,59 @@
-# Cheatsheet page
+::card-grid
+#title
+Theoretical cheatsheet
+
+#root
+:ellipsis{left=0px width=40rem top=10rem blur=140px}
+
+#default
+  ::card{icon=logos:nuxt-icon}
+  #title
+  Testing general
+  #description
+  - Unit testing
+  - Integration testing
+  - End to end testing: Run your app in a simulated environment: Cypress
+  - acceptance testing: tests that ensure the software meets all the clients requirement
+  - system testing: Tests that work on required hardware/servers
+  - smoke testing: Most important tests first before the rest of the suit
+  - stress testing: capability of infrastructure
+  ::
+
+  ::card
+  #title
+  Test driven development
+  #description
+  - Have a pipeline that run the tests before making the commit
+  - Write tests before start coding
+  - Refactor -> Fail -> Pass -> Refactor (till all pass)
+  - tool: jest
+  ::
+
+  ::card
+  #title
+  Vue Components
+  #description
+    - [Mock functions](https://jestjs.io/docs/mock-function-api): function that you can pass as a callback to test other function. You can watch details about the callback. How many time it was run and what parameters where passed into it. 
+      - you can acces the watch method intel with .mock attribute ex mockFn.mock.calls, mockFn.mock.results
+      - spyOn to also track the methods
+    - Setup and Teardown: You can set prepearment methods: what will happen before/after testing, for everything or just scoped
+    - The Jest Object: Automatically in scope in every test file. Provides the functionality, test, it, describe, etc.
+  ::
+
+  ::card
+  #title
+  Unit testing
+  #description
+  Validate the behavior of function, classes, components, methods: Given an input, check if the output is expected
+  ::
+
+  ::card
+  #title
+  Integration testing
+  #description
+  - Testing multiple units of code together.
+  - Not just input and output. See if a function has been called the right way, as many time as needed with the correct parameters, the component has been mounted and so on
+  - Ex: Component that takes data from a hook. Check if it displayed properly in the component
+  - Ex: API getters that integrates with the application. Proper errors are integrated, proper result display and so on.
+  ::
+::
