--- a/content/3.Web dev/2.Cheatsheet.md
+++ b/content/3.Web dev/2.Cheatsheet.md
@@ -1,3 +1,4 @@
+## Testing
 ::card-grid
 #root
 :ellipsis{left=0px width=40rem top=10rem blur=140px}
@@ -5,7 +6,7 @@
 #default
   ::card
   #title
-  <!-- Empty title slot -->
+  test
   #description
     - Unit testing: Validate the behavior of function, classes, components, methods (Given an input, check if the output is expected)
     - Integration testing
@@ -44,8 +45,9 @@
   ::
 ::
 
-::card-grid
 
+## Data storage and manipulation
+::card-grid
 #default
   ::card
   #title
@@ -133,4 +135,52 @@
     - Simplifies API interactions with a single endpoint
     - Type safety and validation of queries
   ::
+::
+
+## Optimization & Core web vitals
+
+::card-grid
+#default
+  ::card
+  #title
+  Optimization tools
+  #description
+  [Reference](https://www.youtube.com/watch?v=0fONene3OIA)
+  - [web vitals](https://chromewebstore.google.com/detail/web-vitals/ahfhijdlegdabablpippeagghigmibma?pli=1) made by google, hover over elements that need optimization, display measurements
+  - [lighthouse](https://developer.chrome.com/docs/lighthouse/overview/) (integrated with devtools)
+  - [unlighthouse](https://unlighthouse.dev/) - lighthouse report for each page (has an stk, can be integrated into the pipeline)
+  
+  ##### FID (First Input Delay)
+  - The ammount of time the user interacts with the page (click button, process events)
+  - Good 100ms < needs improvement 300ms < bad
+  - reduce javascript execution time
+  - use lazy loading
+  - measure with web vitals plugin
+  ::
+
+  ::card
+  #title
+  LCP (Largest contentful paint)
+  #description
+  - loading performance: text -> css -> images & videos.
+  - Good 2.5 sec < Needs improvement 4.0 < poor (impact on search engine optimization)
+  - analyze open network -> analyze waterfall
+  - reduce the resource load time (compress img use modern formats and fonts)
+  - serves assets from CDN (content delivery network) server nearby good
+  - blocking js (don't run js before loading the image), SSR > SPA
+  - preload (modenr browser) 
+    - img fetchPriority (high/low) html tag
+    - preload attribute in link
+  ::
+
+  ::card
+  #title
+  CLS (Comulative Layout Shift)
+  #description
+  Visual stability. All things load at once or pretty close to each other. No random renders apears on screen
+  - good 0.1 < needs improvement 0.25 < bad
+  - generate lighthouse report in dev tools
+  - web vitals extension
+  - don't use img without width / height tags or aspect-ratio: 4/9;
+  - srcset tag different img different containers
 ::
